--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Copyleft",
     "autoload": {
         "psr-4": {
-            "Duran\\SitePortefolioGithub\\": "src/"
+            "": "src/"
         }
     },
     "authors": [
@@ -14,5 +14,7 @@
             "email": "durandraphael.courriel@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.25"
+    }
 }
