--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     ],
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.25"
+    },
+    "require": {
+        "phpmailer/phpmailer": "^6.8"
     }
 }
